test/src/e2e_vm_tests/test_programs/should_fail/repeated_configurable/src/main.sw
script;

configurable {
    X: b256 = 0x0101010101010101010101010101010101010101010101010101010101010101,
    X: u64 = 42,
}

fn main() {}
